<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.6.7</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.theblockchainxdev.star</groupId>
    <artifactId>backend</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>
    <name>[${project.packaging}] ${project.artifactId} :: ${project.version}</name>
    <description>STAR Project Backend</description>
    <modules>
        <module>api</module>
        <module>service</module>
    </modules>

    <properties>
        <java.version>11</java.version>
        <mapstruct.version>1.4.2.Final</mapstruct.version>
        <collections4.version>4.4</collections4.version>
        <commons-io.version>2.6</commons-io.version>
        <hyperledger-fabric.version>2.1.0</hyperledger-fabric.version>
        <sonar.organization>xdev-tech</sonar.organization>
        <jacoco.version>0.8.7</jacoco.version>
        <sonarqube.version>3.8.0.2131</sonarqube.version>
        <sonar.coverage.exclusions>models/**/*</sonar.coverage.exclusions>
        <sonar.exclusions>models/**/*</sonar.exclusions>
        <sonar.jacoco.excludes>models/**/*</sonar.jacoco.excludes>
        <maven-checkstyle-plugin.version>3.1.2</maven-checkstyle-plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.mapstruct</groupId>
            <artifactId>mapstruct</artifactId>
            <version>${mapstruct.version}</version>
        </dependency>
        <dependency>
            <groupId>org.hyperledger.fabric</groupId>
            <artifactId>fabric-gateway-java</artifactId>
            <version>${hyperledger-fabric.version}</version>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.vintage</groupId>
            <artifactId>junit-vintage-engine</artifactId>
            <scope>test</scope>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                        <path>
                            <groupId>org.mapstruct</groupId>
                            <artifactId>mapstruct-processor</artifactId>
                            <version>${mapstruct.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
            </plugin>

            <!-- Configuration Plugin Maven Jacoco multi-modules configuration -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <configuration>
                    <excludes>
                        <exclude>**/com/star/dto/**</exclude>
                        <exclude>**/com/star/models/**</exclude>
                        <exclude>**/com/star/enums/**</exclude>
                        <exclude>**/com/star/configuration/HyperLedgerFabricConfiguration.class</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <id>merge</id>
                        <goals>
                            <goal>merge</goal>
                        </goals>
                        <configuration>
                            <fileSets>
                                <fileSet implementation="org.apache.maven.shared.model.fileset.FileSet">
                                    <directory>${project.basedir}</directory>
                                    <includes>
                                        <include>**/*.exec</include>
                                    </includes>
                                </fileSet>
                            </fileSets>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- Configuration Plugin Maven Sonarqube -->
            <plugin>
                <groupId>org.sonarsource.scanner.maven</groupId>
                <artifactId>sonar-maven-plugin</artifactId>
                <version>${sonarqube.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
